Ct 1014 postgres (#112)
* Update to Spring Boot 3.2

* Setup docker compose

* Change model into JPA enteties

* Setup flyway to maintain database structure

* Switch from mongoDb to postgres

* Make jpa-repository work

* Adjust tests

* Add files

* Change test from integration to unit tests for controllers

* add tests for DateRange and GruopController

* upgrade to version 3.7

* fix tests

* Fix test with error

* Uningore two tests

* Update some more tests, and remove one

* fix tests

* Add new test for organisation-service

* Downgrade spring version - due to problem with cache

* Fix errors in jpa-repository

* change from Date to LocalDate in jpa

* Inital code to test jpa repository

* Update OrderItem model and related code

* add config to schema generation

* Manual adjust db structure (couldnt get schema generation to work)

* Adjust jpa-repository (remove COALESCE)

* Change Date to LocalDate/LocalDateTime and database to timestamp

* Fix tests according to change in Date format

* Remove customer table and save as fields

* update tests to fit latest update to model

* fix the claim model

* refactor to constructor in claimservice & update the tests

* Avoid using deprecated api

* worked on tests

* Deploy branch to pwf

* hop this works, here is a truck :truck:

* add some structure of flais application

* configure flais application in kustomize for pwf

* Yayeet

* adjust sso config

* move around commonlabels

* add kustomization

* change kustomizationpath

* adjust demo deployment

* SURELY this will work :smirk:

* adjust namespace & path

* fix error syntax

* add onepassword to resource

* deploy to beta

* fix syntax error

* deploy to beta

* change onepassword path

* fix env names

* remove old database referance

* hopes this works

* remove onepassword from base

* change org-id to fintlabs

* :art:

* change secretref
