@@ -6,14 +6,14 @@ import no.fint.model.felles.kompleksedatatyper.Identifikator;
 import no.fint.model.resource.Link;
 import no.fint.model.resource.okonomi.faktura.FakturagrunnlagResource;
 import no.fint.model.resource.okonomi.faktura.FakturalinjeResource;
-import no.fint.model.resource.okonomi.faktura.FakturamottakerResource;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.time.ZoneId;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class InvoiceFactory {
@@ -27,29 +27,29 @@ public class InvoiceFactory {
     public FakturagrunnlagResource createInvoice(Claim claim) {
         List<FakturalinjeResource> invoiceLines = claim.getOrderItems().stream().map(orderItem -> {
             FakturalinjeResource invoiceLine = new FakturalinjeResource();
-            if (orderItem.getItemPrice() != null) {
-                invoiceLine.setPris(orderItem.getItemPrice());
-            } else {
-                invoiceLine.setPris(orderItem.getLineitem().getItemPrice());
-            }
+            invoiceLine.setPris(orderItem.getItemPrice() != null ? orderItem.getItemPrice() : orderItem.getOriginalItemPrice());
             invoiceLine.setAntall(orderItem.getItemQuantity() / 1.0f);
             invoiceLine.setFritekst(Collections.singletonList(orderItem.getDescription()));
-            invoiceLine.addVare(Link.with(orderItem.getLineitem().getUri()));
+            invoiceLine.addVare(Link.with(orderItem.getItemUri()));
             return invoiceLine;
-        }).collect(Collectors.toList());
+        }).toList();
 
 
         FakturagrunnlagResource invoice = new FakturagrunnlagResource();
         invoice.setFakturalinjer(invoiceLines);
-        invoice.setLeveringsdato(Date.from(claim.getCreatedDate().atStartOfDay(ZoneId.systemDefault()).toInstant()));
+        invoice.setLeveringsdato(startOfDayFrom(claim.getCreatedDate()));
         invoice.setNettobelop(claim.getOriginalAmountDue());
-        invoice.setMottaker(personService.getFakturamottakerByPersonId(claim.getCustomer().getId()));
-        invoice.addFakturautsteder(Link.with(claim.getPrincipal().getUri()));
+        invoice.setMottaker(personService.getFakturamottakerByPersonId(claim.getCustomerId()));
+        invoice.addFakturautsteder(Link.with(claim.getPrincipalUri()));
 
         Identifikator identifikator = new Identifikator();
-        identifikator.setIdentifikatorverdi(claim.getOrderNumber());
+        identifikator.setIdentifikatorverdi(String.valueOf(claim.getOrderNumber()));
         invoice.setOrdrenummer(identifikator);
 
         return invoice;
+    }
+
+    private static Date startOfDayFrom(LocalDateTime localDateTime) {
+        return Date.from(localDateTime.with(LocalTime.MIN).atZone(ZoneId.systemDefault()).toInstant());
     }
 }
